<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:toolbar="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_forgot_password1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/for_password_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:navigationIcon="@drawable/btn_back">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:text="@string/for_password1"/>

    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/user_id"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:inputType="numberSigned"
        android:lines="1"
        android:layout_gravity="center_horizontal"
        android:hint="@string/write_user_name_hint"
        android:theme="@style/EditViewTheme"/>
    <EditText
        android:id="@+id/user_mail"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:inputType="textWebEmailAddress"
        android:lines="1"
        android:layout_gravity="center_horizontal"
        android:hint="@string/write_mail_hint"
        android:theme="@style/EditViewTheme"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="30dp"
        android:text="@string/no_mail_hint"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_marginTop="30dp"/>
    <Button
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:text="@string/btn_sure"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="70dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/btn_rectangle_theme" />
</LinearLayout>