<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/logo_sign_in"/>
    <EditText
        android:id="@+id/user_id"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:inputType="numberSigned"
        android:lines="1"
        android:layout_gravity="center_horizontal"
        android:hint="@string/user_name_hint"
        android:theme="@style/EditViewTheme"/>
    <EditText
        android:id="@+id/user_password"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:inputType="numberPassword"
        android:lines="1"
        android:layout_gravity="center_horizontal"
        android:hint="@string/password_hint"
        android:theme="@style/EditViewTheme"/>
    <TextView
        android:id="@+id/tv_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="end"
        android:layout_marginEnd="60dp"
        android:onClick="textView"/>
    <Button
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="45dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/btn_rectangle_theme"
        android:onClick="signIn"/>

</LinearLayout>
