<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.a00687560.mdtug001.HomeActivity">

    <GridLayout
        android:id="@+id/gridlayout"
        android:layout_width="300dp"
        android:layout_height="160dp"
        android:layout_gravity="center_horizontal"
        android:columnCount="4"
        android:rowCount="4"
        android:visibility="gone">
        <ImageButton
            android:layout_column="0"
            android:layout_row="0"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@drawable/btn_page_form" />
        <TextView
            android:layout_column="0"
            android:layout_row="1"
            android:layout_marginStart="12dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/page"
            android:textColor="@color/blackFont"/>
        <ImageButton
            android:layout_column="1"
            android:layout_row="0"
            android:layout_marginStart="35dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@drawable/btn_book_guide_form"/>
        <TextView
            android:layout_column="1"
            android:layout_row="1"
            android:layout_marginStart="47dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/lib"
            android:textColor="@color/blackFont"/>
        <ImageButton
            android:layout_column="2"
            android:layout_row="0"
            android:layout_marginStart="25dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@drawable/btn_per_guide_form"/>
        <TextView
            android:layout_column="2"
            android:layout_row="1"
            android:layout_marginStart="37dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/per"
            android:textColor="@color/blackFont"/>
        <ImageButton
            android:layout_column="3"
            android:layout_row="0"
            android:layout_marginStart="35dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@drawable/btn_news_form"/>
        <TextView
            android:layout_column="3"
            android:layout_row="1"
            android:layout_marginStart="47dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/news"
            android:textColor="@color/blackFont"/>
        <ImageButton
            android:layout_column="0"
            android:layout_row="2"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@drawable/btn_paper_form"/>
        <TextView
            android:layout_column="0"
            android:layout_row="3"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/paper"
            android:textColor="@color/blackFont"/>
        <ImageButton
            android:layout_column="1"
            android:layout_row="2"
            android:layout_marginTop="20dp"
            android:layout_marginStart="35dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@drawable/btn_web_form"/>
        <TextView
            android:layout_column="1"
            android:layout_row="3"
            android:layout_marginStart="47dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/web"
            android:textColor="@color/blackFont"/>
        <ImageButton
            android:layout_column="2"
            android:layout_row="2"
            android:layout_marginTop="20dp"
            android:layout_marginStart="25dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@drawable/btn_img_form"/>
        <TextView
            android:layout_column="2"
            android:layout_row="3"
            android:layout_marginStart="37dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/picture"
            android:textColor="@color/blackFont"/>
        <ImageButton
            android:id="@+id/up"
            android:layout_column="3"
            android:layout_row="2"
            android:layout_marginTop="20dp"
            android:layout_marginStart="35dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@drawable/btn_up"/>
        <TextView
            android:layout_column="3"
            android:layout_row="3"
            android:layout_marginStart="47dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/more"
            android:textColor="@color/blackFont"/>

    </GridLayout>
    
    <LinearLayout
        android:id="@+id/linear_tag"
        android:layout_width="300dp"
        android:layout_height="20dp"
        android:layout_gravity="center_horizontal"
        android:visibility="visible">
        <Button
            android:id="@+id/menu_1"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:background="@drawable/btn_bg_form"
            android:text="@string/page"
            android:textColor="@drawable/btn_text_form"
            style="?android:attr/borderlessButtonStyle" />
        <Button
            android:id="@+id/menu_2"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:background="@drawable/btn_bg_form"
            android:text="@string/lib"
            android:textColor="@drawable/btn_text_form"
            style="?android:attr/borderlessButtonStyle" />
        <Button
            android:id="@+id/menu_3"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:background="@drawable/btn_bg_form"
            android:text="@string/per"
            android:textColor="@drawable/btn_text_form"
            style="?android:attr/borderlessButtonStyle" />
        <Button
            android:id="@+id/menu_4"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:background="@drawable/btn_bg_form"
            android:text="@string/news"
            android:textColor="@drawable/btn_text_form"
            style="?android:attr/borderlessButtonStyle" />
        <Button
            android:id="@+id/menu_5"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:background="@drawable/btn_bg_form"
            android:text="@string/paper"
            android:textColor="@drawable/btn_text_form"
            style="?android:attr/borderlessButtonStyle" />
        <Button
            android:id="@+id/menu_6"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:background="@drawable/btn_bg_form"
            android:text="@string/more"
            android:textColor="@drawable/btn_text_form"
            style="?android:attr/borderlessButtonStyle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="46dp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="17dp">
        <EditText
            android:inputType="text"
            android:maxLines="1"
            android:imeOptions="actionSearch"
            android:layout_width="252dp"
            android:layout_height="46dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="17dp"
            android:paddingStart="8dp"
            android:background="@drawable/search_form"/>
        <Button
            android:layout_width="48dp"
            android:layout_height="46dp"
            android:text="@string/search"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:background="@drawable/btn_search"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal">
        <ImageButton
            android:id="@+id/btn_offer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_offer_form"/>
        <ImageButton
            android:id="@+id/btn_book_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="76dp"
            android:background="@drawable/btn_book_guide_form"/>
        <ImageButton
            android:id="@+id/btn_per_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="76dp"
            android:background="@drawable/btn_per_guide_form"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/offer_for_me"
                android:textColor="@color/blackFont"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_guide"
                android:layout_marginStart="67dp"
                android:textColor="@color/blackFont"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/per_guide"
                android:layout_marginStart="65dp"
                android:textColor="@color/blackFont"/>

        </LinearLayout>





    </LinearLayout>
